<resources>
    <string name="app_name">WisenApp</string>
    <string name="action_settings">Settings</string>
    <string name="not_connected">Not Connected</string>
    <string name="bt_not_enabled_leaving">bt_not_enabled_leaving</string>
    <string name="scan">scan</string>
    <string name="discoverable">discoverable</string>
    <string name="scanning">scanning</string>
    <string name="select_device">select device</string>
    <string name="none_found">device not found</string>
    <string name="none_paired">No paired devices</string>
    <string name="title_connecting">connecting</string>
    <string name="title_connected_to">connected to</string>
    <string name="title_not_connected">not connected</string>
    <string name="custom_title_left"></string>
    <string name="custom_title_right"></string>
    <string name="change_name">change name</string>
    <string name="startrecord">start record</string>
    <string name="stoprecord">stop record</string>

    <string name="connecting_status">Connecting</string>
    <string name="connected_status">Connected.</string>
    <string name="button_text_scan">scan smart devices</string>

    <string name="bluetooth_not_supported">bluetooth is not suported</string>
    <string name="ble_not_supported">ble is not supported</string>
    <string name="ble_test_uuid">CDB7950D-73F1-4D4D-8E47-C090502DBD63</string>
    <string name="set_the_scan_filter">Set scan filter</string>
</resources>
