<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.wisen.aidl_test1.BTMainActivity">
    <item android:id="@+id/scann_device"
        android:title="@string/scan"
        android:orderInCategory="100"
        />

    <item android:id="@+id/discovery"
        android:title="@string/discoverable"
        android:orderInCategory="100"
        />

    <item android:id="@+id/change_name"
        android:title="@string/change_name"
        android:orderInCategory="100"
        />

    <item android:id="@+id/startrecord"
        android:title="@string/startrecord"
        android:orderInCategory="100"
        />

    <item android:id="@+id/stoprecord"
        android:title="@string/stoprecord"
        android:orderInCategory="100"
        />
</menu>